--- a/Perfiles/templates/formulario.html
+++ b/Perfiles/templates/formulario.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" type="text/css" href="{% static 'css/Form.css' %}"> <!-- Enlaza al CSS externo -->
+    <link rel="stylesheet" type="text/css" href="{% static '/Form.css' %}"> <!-- Enlaza al CSS externo -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"> <!-- Librería de iconos -->
 
     <title>Formulario de contacto</title>
